<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Backgroundlayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.tifui.mp3musictransfer.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textIP"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:textColor="@color/TextlabelColor"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTex_IP"
        android:layout_below="@+id/textView"
        android:background="@color/EditTextColorIPPort"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textPort"
        android:id="@+id/textView2"
        android:layout_below="@+id/editTex_IP"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:textColor="@color/TextlabelColor"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_port"
        android:layout_below="@+id/textView2"
        android:background="@color/EditTextColorIPPort"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTex_IP"
        android:layout_alignEnd="@+id/editTex_IP"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textStar"
        android:id="@+id/button_start"

        android:background="@color/ButtonStartBack"
        android:layout_below="@+id/progressBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/button_stop"
        android:layout_toLeftOf="@+id/button_stop" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_status"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:editable="false"
        android:background="@color/EditTextColorIPPort"

        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView3" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_curentTask"
        android:layout_alignRight="@+id/editText_port"
        android:layout_alignEnd="@+id/editText_port" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStringStop"
        android:id="@+id/button_stop"
        android:background="@color/ButtonStopBack"
        android:layout_below="@+id/progressBar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textStatus"
        android:id="@+id/textView3"
        android:textColor="@color/TextlabelColor"
        android:textStyle="bold"
        android:layout_below="@+id/textViewDisconected"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/textView_curentTask"
        android:textColor="@color/TextlabelColor"
        android:layout_below="@+id/editText_port"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:textStyle="bold"
        android:id="@+id/textView_Connected"
        android:textColor="@color/TextConnected"
        android:layout_below="@+id/button_start"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textViewDisconected"
        android:textStyle="bold"
        android:textColor="@color/TextDisconected"
        android:layout_below="@+id/textView_Connected"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
